objects/Incentive_Program__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ends_At__c</fullName>
        <label>Ends At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Buyer_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Buyer Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Instant_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Instant Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Seller_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Seller Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payout_Method__c</fullName>
        <label>Payout Method</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payout__c</fullName>
        <label>Payout</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referrer_Payout_Method__c</fullName>
        <label>Referrer Payout Method</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon Gift Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instant Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referrer_Payout__c</fullName>
        <label>Referrer Payout</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shift_Key__c</fullName>
        <externalId>true</externalId>
        <label>Shift Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Starts_At__c</fullName>
        <label>Starts At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Perk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Incentive Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incentive Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>